--- a/style.css
+++ b/style.css
@@ -5,8 +5,21 @@ body{
 
 article{
   background: linear-gradient(to top , rgb(89, 54, 155, 0.5), rgb(197, 68, 68, 0.5));
-  padding: 20px 40px;
+  padding: 5px 40px;
   margin-top: 20px;
+  margin-left: 20px;
   border-radius: 10px;
+  text-align: center;
+  
+}
+footer{
+color: aliceblue;
+text-align: center;
 }
 
+.Contatos{
+    text-align: center;
+}
+tbody{
+    text-align: center;
+}
