--- a/style.css
+++ b/style.css
@@ -1,25 +1,25 @@
 body{
-    width: 95%;
+    width: 97%;
     background: url(img/bg.jpg) center;
 }
 
-article{
+article#Cursos{
   background: linear-gradient(to top , rgb(89, 54, 155, 0.5), rgb(197, 68, 68, 0.5));
   padding: 5px 40px;
   margin-top: 20px;
   margin-left: 20px;
   border-radius: 10px;
   text-align: center;
-  
-}
-footer{
-color: aliceblue;
-text-align: center;
+  font-size: 16px;
+  line-height: 1.5px;
 }
 
-.Contatos{
+div.contatos#Rodapé{
     text-align: center;
+    color: aliceblue;
 }
-tbody{
-    text-align: center;
+
+button{
+    font-size: 16px;
 }
+
